package edu.austral.ingsis.clifford.communication;

public final class Success implements ResultType {
  @Override
  public String getResultType() {
    return "Success";
  }
}
