@startuml

interface ResultType {
  + getResultType(): String
}

ResultType <- Result

class Success {}

class Failure {}

ResultType <|.. Success
ResultType <|.. Failure

class FileManager {
  - cursor: FileSystem
  - commandFactory: CommandFactory
  + getCursor(): FileSystem
  + run(command: String): Result<FileManager>
  - getCommand(command: String): Result<Command>
  + copy(): FileManager
}

interface FileSystem {
  + getName(): String
  + isDirectory(): boolean
  + getDirectory(): Result<CompositeFileSystem>
  + copy(): FileSystem
}

FileManager --> FileSystem

class File {
  - name: String
}

FileSystem <|... File

interface CompositeFileSystem {
  + add(toAdd: FileSystem): Result<FileSystem>
  + remove(toRemove: FileSystem): Result<FileSystem>
  + getChildren(): List<FileSystem>
}

FileSystem <|.. CompositeFileSystem

class Directory {
  - name: String
  - files: List<FileSystem>
}

CompositeFileSystem <|.. Directory
FileSystem <--o Directory

class CommandFactory {
  - parser: Parser
  + getCommand(command: String): Result<Command>
  - parseCommand(params: String): List<String>
}

FileManager --> CommandFactory

class Parser {
  + parseCommand(params: String): List<String>
}

Parser <- CommandFactory

interface Command {
  + execute(): Result<FileManager>
}

CommandFactory --> Command

class LsCommand {
  - fileManager: FileManager
  - options: Map<String, String>
}

class CdCommand {
  - fileManager: FileManager
  - options: Map<String, String>
}

class TouchCommand {
  - fileManager: FileManager
  - options: Map<String, String>
}

class MkdirCommand {
  - fileManager: FileManager
  - options: Map<String, String>
}

class RmCommand {
  - fileManager: FileManager
  - options: Map<String, String>
}

class PwdCommand {
  - fileManager: FileManager
  - options: Map<String, String>
}

Command <|.. LsCommand
Command <|.. CdCommand
Command <|.. TouchCommand
Command <|.. MkdirCommand
Command <|.. RmCommand
Command <|.. PwdCommand

class Result<E> {
  + communication element
  - resultType: ResultType
  - value: E
  - message: String
  + getResultType(): String
  + getValue(): E
  + getMessage(): String
}

@enduml